# Hexapod-Ros2

./: README.md  frames_2025-05-20_15.42.01.gv
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/msg/: LegCommand.msg  LegStatus.msg  Legfeedback.msg  MotorCmd.msg  SensorData.msg
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/joint_state_publisher/share/joint_state_publisher/: package.sh
install/joint_state_publisher_gui/share/joint_state_publisher_gui/: package.sh
install/phantomx_control/share/ament_index/resource_index/package_run_dependencies/: phantomx_control
install/phantomx_control/share/phantomx_control/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/phantomx_control/share/phantomx_control/config/: phantomx_control.yaml
install/phantomx_control/share/phantomx_control/launch/: phantomx_control.launch.py
install/phantomx_description/share/phantomx_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/phantomx_description/share/phantomx_description/launch/: display.launch.py
install/phantomx_description/share/phantomx_description/urdf/: phantomx.urdf  phantomx.xacro  phantomx_urdf.xacro
install/phantomx_gazebo/lib/phantomx_gazebo/: forward_kin.py  walker
install/phantomx_gazebo/local/lib/python3.10/dist-packages/connections_api-0.0.0-py3.10.egg-info/: top_level.txt
install/phantomx_gazebo/share/ament_index/resource_index/package_run_dependencies/: phantomx_gazebo
install/phantomx_gazebo/share/ament_index/resource_index/parent_prefix_path/: phantomx_gazebo
install/phantomx_gazebo/share/phantomx_gazebo/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/phantomx_gazebo/share/phantomx_gazebo/launch/: phantomx_gazebo.launch.py
log/: latest_build
src/hexapod/: .package.xml.swp  CMakeLists.txt  package.xml  setup.py
src/hexapod/hexapod/: Ax18.py  ciclograms.py  coordinator.py  dxl_driver.py  fsr_test_node.py  leg_controller.py  one_leg_controller.py  one_leg_coordinator.py  test_hexapod_direct.py  test_subscribe_msg.py
src/hexapod/launch/: hexapod.launch.py
src/hexapod/log/: latest_build
src/move_it_config/: .setup_assistant  CMakeLists.txt  package.xml
src/move_it_config/config/: PhantomX.ros2_control.xacro  PhantomX.srdf  PhantomX.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  ros2_controllers.yaml
src/move_it_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
