<?xml version="1.0"?>
<package format="3">
  <name>phantomx_gazebo</name>
  <version>0.0.0</version>
  <description>The phantomx_gazebo package for ROS 2</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>robot_state_publisher</depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <depend>phantomx_description</depend>
  <depend>phantomx_control</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

